force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <label>NotUsed_Target</label>
    <nameField>
        <displayFormat>TR{00}</displayFormat>
        <label>Target</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NotUsed_Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>