force-app/main/default/objects/Target__c/fields/Achieved_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Percentage__c</fullName>
    <formula>(Actual_1__c /  Target_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>