force-app/main/default/objects/Target__c/fields/Actual_10__c.field-meta.xml
<CustomField>
    <fullName>Actual_10__c</fullName>
    <label>Actual 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>