force-app/main/default/objects/Target__c/fields/Actual_1__c.field-meta.xml
<CustomField>
    <fullName>Actual_1__c</fullName>
    <label>Actual 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>