force-app/main/default/objects/Target__c/fields/Actual_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_2__c</fullName>
    <label>Actual 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>