force-app/main/default/objects/Target__c/fields/Exe_Profile__c.field-meta.xml
<CustomField>
    <fullName>Exe_Profile__c</fullName>
    <formula>Executive__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exe Profile</label>
    <type>Text</type>
</CustomField>