force-app/main/default/objects/Target__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive</label>
    <referenceTo>Incentive__c</referenceTo>
    <relationshipName>Target</relationshipName>
    <type>Lookup</type>
</CustomField>