force-app/main/default/objects/Target__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>Period__c</referenceTo>
    <relationshipName>Target</relationshipName>
    <type>Lookup</type>
</CustomField>