force-app/main/default/objects/Target__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipName>Target</relationshipName>
    <type>Lookup</type>
</CustomField>