force-app/main/default/objects/Target__c/fields/Target_10__c.field-meta.xml
<CustomField>
    <fullName>Target_10__c</fullName>
    <label>Target 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>