force-app/main/default/objects/Target__c/fields/Target_2__c.field-meta.xml
<CustomField>
    <fullName>Target_2__c</fullName>
    <label>Target 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>