force-app/main/default/objects/Target__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>