force-app/main/default/objects/Target__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team</label>
    <type>Checkbox</type>
</CustomField>