force-app/main/default/objects/Target__c/fields/Total_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Amount__c</fullName>
    <label>Total Actual Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>