force-app/main/default/objects/Target__c/fields/Total_Self_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Self_Actual__c</fullName>
    <label>Total Self Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>