force-app/main/default/objects/Target__c/fields/Total_Self_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Self_Target__c</fullName>
    <label>Total Self Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>