force-app/main/default/objects/Target__c/fields/Total_Slab_Achivement__c.field-meta.xml
<CustomField>
    <fullName>Total_Slab_Achivement__c</fullName>
    <label>Total Slab  Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>