force-app/main/default/objects/Target__c/fields/Total_Weighted_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Total_Weighted_Achievement__c</fullName>
    <label>Total Weighted Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>